--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 JWT_SECRET = "Iloveindia"
-MONGODB_URL = "mongodb://localhost:27017/awdiz11"
+MONGODB_URL = "mongodb+srv://newuser:cWCalqoowpss0ghK@cluster0.6yd9l.mongodb.net/awdiz-33"
