--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 JWT_SECRET = "Iloveindia"
-MONGODB_URL = "mongodb+srv://newuser:cWCalqoowpss0ghK@cluster0.6yd9l.mongodb.net/awdiz-33"
+MONGODB_URL = "mongodb+srv://newuser:cWCalqoowpss0ghK@cluster0.6yd9l.mongodb.net/awdiz-33B"
+
+# database - folder
+# collections  - files - users, blogs, products, orders
